unpackaged/config/qa/objects/CustomObject3__c.object
<CustomObject>
    <fields>
        <fullName>C3_currency__c</fullName>
        <label>C3_currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C3_date__c</fullName>
        <label>C3_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C3_number__c</fullName>
        <label>C3_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C3_phone__c</fullName>
        <label>C3_phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>C3_picklist__c</fullName>
        <label>C3_picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
                <value>
                    <fullName>Option4</fullName>
                </value>
                <value>
                    <fullName>Option5</fullName>
                </value>
                <value>
                    <fullName>Option6</fullName>
                </value>
                <value>
                    <fullName>Option7</fullName>
                </value>
                <value>
                    <fullName>Option8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C3_text__c</fullName>
        <label>C3_text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>CustomObject3s</relationshipLabel>
        <relationshipName>CustomObject3s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CustomObject3</label>
    <nameField>
        <label>CustomObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomObject3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>